IN-6 WIP add scroll virtualizing in chat, fix imageuploader label, cb for useIntersectionObserver wrapped useCallback

--- a/src/components/Attachments/ImageAttachment/imageattachment.module.css
+++ b/src/components/Attachments/ImageAttachment/imageattachment.module.css
@@ -15,7 +15,10 @@
 
 .loadedImage {
   min-width: 100px;
-  max-width: 400px;
+  max-width: min(
+    400px,
+    calc(100vw - var(--window-margin) * 2 - var(--main-side-panel-width) * 2 - var(--chats-list-width) - 50px) - 75px
+  );
   max-height: 300px;
   height: auto;
 }
