--- a/src/components/Chat/Scroller/scroller.module.css
+++ b/src/components/Chat/Scroller/scroller.module.css
@@ -3,6 +3,7 @@
   padding-right: 5px;
   overflow: auto;
   height: 100%;
+  contain: size style;
 }
 
 .chatWindow * {
